--- a/css/styles.css
+++ b/css/styles.css
@@ -151,6 +151,10 @@ img {
   font-size: 0.9rem;
 }
 
+#githubLink {
+  text-decoration: none;
+  color: #463D59;
+}
 
 .contact {
   display: flex;
@@ -171,13 +175,14 @@ footer {
 /* about page */
 
 
-header.about {
+.text-container {
 
 display: flex;
 flex-direction: column;
+gap: 30px;
+height: 500px;
 align-items: center;
 justify-content: center;
-margin: 100px;
   
 }
 
