--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,7 @@ body {
 .container {
 
   margin: 20px;
+  padding: 20px;
 
 }
 
@@ -28,6 +29,9 @@ nav {
   border-bottom: 1px solid var(--text);
   padding-bottom: 20px;
   font-size: 2rem;
+  padding-top: 20px;
+  padding-left: 10px;
+  padding-right: 10px;
 
 }
 
@@ -63,12 +67,13 @@ header {
   justify-content: center;
   margin: 0px;
   height: 70vh;
+  position: relative;
 
 }
 
 .header-background {
 
-  background-image: radial-gradient(circle, yellow, transparent, transparent);
+  background-image: radial-gradient(circle, yellow, transparent, transparent, transparent);
   height: 50%;
   width: 50%;
   position: absolute;
@@ -87,7 +92,7 @@ header p#hello {
 header p#description {
   font-size: 2rem;
   position: absolute;
-  top: 65%;
+  top: 70%;
   left: 45%;
 }
 
@@ -123,14 +128,14 @@ p {
 
   font-family: 'Inter', sans-serif;
   margin: 0;
-  font-size: 1rem;
+  font-size: 1.5rem;
   font-weight: 300;
   padding-bottom: 5px;
 
 }
 
 p.category {
-  font-size: 0.9rem;
+  font-size: 1.2rem;
 }
 
 .portfolio-projects {
@@ -138,6 +143,9 @@ p.category {
   display: flex;  
   flex-direction: row;
   flex-flow: row wrap;
+  align-content: center;
+  justify-content: center;
+  margin-top: 40px;
 }
 
 img {
@@ -168,7 +176,6 @@ footer {
 
   border-top: 1px solid black;
   justify-content: center;
-  padding-top: 20px;
 
 }
 
@@ -179,15 +186,24 @@ footer {
 
 display: flex;
 flex-direction: row;
-gap: 20px;
-height: 100vh;
+gap: 50px;
+height: 500px;
+margin: 200px;
 align-items: center;
 justify-content: center;
   
 }
 
-.about button {
-  margin-top: 20px;
+.text-container h2 {
+  padding-bottom: 30px;
+}
+
+.text-container p {
+  padding-bottom: 30px;
+}
+
+.profile-image {
+  border-radius: 4px;
 }
 
 .download-cv {
@@ -197,6 +213,7 @@ justify-content: center;
   padding: 20px 20px;
   border-radius: 4px;
   font-weight: 600;
+  margin-top: 20px;
 
 }
 
@@ -210,152 +227,189 @@ justify-content: center;
 
 }
 
-
 @media only screen and (max-width: 768px) {
+
+
+  
+  .nav-links {
     
-    .nav-links {
-      
-      position: fixed;
-      top: -110%;
+    position: fixed;
+    top: -110%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 30px;
+    background-color: var(--background);
+    width: 100%;
+    height: 100vh;
+    text-align: center;
+    transition: 1s;
+    box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
+    z-index: 1;
+
+    }
+
+  .active {
+        top: 0;
+    }
+
+  .burger {
+
       display: flex;
-      flex-direction: column;
       justify-content: center;
-      gap: 30px;
       background-color: var(--background);
-      width: 100%;
-      height: 100vh;
-      text-align: center;
-      transition: 1s;
-      box-shadow: 0 10px 27px rgba(0, 0, 0, 0.05);
+      border: 0px solid var(--text);
+      padding: 20px;
+      justify-content: flex-end;
+      margin: 0;
 
-      }
+    }
+
+  .social-media-links {
+
+    display: none;
+
+    }
+
+  .nav-links .close {
+
+    display:contents;
+    border: 0px transparent;
+    margin-bottom: 30px;
+    width: 20%;
+
+    }
+
+  .close:hover {
+    font-weight: 900;
+    color: #00fb9f;
+  }
+
+  header {
+
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 0px;
+    height: 70vh;
+
+  }
+
+  .half {
+    height: 20vh;
+  }
+
+  .header-background {
+
+    background-image: radial-gradient(circle, yellow, transparent, transparent);
+    height: 50%;
+    width: 50%;
+    position: block;
+    z-index: -1;
+    left: 10%;
+
+  }
+
+  header p#hello {
+    font-size: 1.7rem;
+    position: static;
+    display: block;
+
+  }
   
-    .active {
-          top: 0;
-      }
-  
-    .burger {
+  header p#description {
+    font-size: 1.7rem;
+    position: static;
+    display: block;
 
-        display: flex;
-        justify-content: center;
-        background-color: var(--background);
-        border: 0px solid var(--text);
-        padding: 20px;
-        justify-content: flex-end;
-        margin: 0;
+  }
 
-      }
+  h1 {
 
-    .social-media-links {
+    font-family: 'Raleway', sans-serif;
+    margin: 0;
+    font-size: 5rem;
 
-      display: none;
+  }
 
-      }
+  h2 {
 
-    .nav-links .close {
+    font-size: 3em;
 
-      display:contents;
-      border: 0px transparent;
-      margin-bottom: 30px;
-      width: 20%;
- 
-      }
+  }
 
-    .close:hover {
-      font-weight: 900;
-      color: #00fb9f;
-    }
+  h3 {
 
-    header {
+    font-family: 'Raleway', sans-serif;
+    margin: 0;
+    font-size: 1.5rem;
 
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: center;
-      margin: 0px;
-      height: 70vh;
+  }
 
-    }
+  p {
 
-    .header-background {
+    font-family: 'Inter', sans-serif;
+    margin: 0;
+    font-size: 1.5rem;
+    font-weight: 300;
 
-      background-image: radial-gradient(circle, yellow, transparent, transparent);
-      height: 50%;
-      width: 50%;
-      position: block;
-      z-index: -1;
-      left: 10%;
+  }
 
-    }
+  .portfolio-projects {
 
-    header p#hello {
-      font-size: 1.7rem;
-      position: static;
-      display: block;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 
-    }
-    
-    header p#description {
-      font-size: 1.7rem;
-      position: static;
-      display: block;
+  }
 
-    }
+  #featured {
 
-    h1 {
+    text-align: center;
+    align-content: center;
 
-      font-family: 'Raleway', sans-serif;
-      margin: 0;
-      font-size: 5rem;
+  }
 
-    }
+  .contact {
 
-    h2 {
+    flex-direction: column;
+    margin-top: 100px;
+    margin-bottom: 100px;
 
-      font-size: 3em;
+  }
 
-    }
-
-    h3 {
-
-      font-family: 'Raleway', sans-serif;
-      margin: 0;
-      font-size: 1.5rem;
-
-    }
-
-    p {
-
-      font-family: 'Inter', sans-serif;
-      margin: 0;
-      font-size: 1rem;
-      font-weight: 300;
-
-    }
-
-    .portfolio-projects {
-
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 100%;
-
-    }
-
-    #featured {
-
-      text-align: center;
-    }
-
-    .contact {
-
-      flex-direction: column;
-      margin-top: 100px;
-      margin-bottom: 100px;
-
-    }
+  .footer {
+    display: none;
+  }
 
 
 /* about page */
 
+.text-container {
+
+display: flex;
+flex-direction: column-reverse;
+align-items: center;
+justify-content: center;
+height: 100%;
+margin-top: 30px;
+margin-bottom: 30px;
+  
 }
+
+.header-background-about {
+
+  background-image: radial-gradient(circle, yellow, transparent, transparent);
+  height: 100%;
+  width: 100%;
+  position: block;
+  z-index: -1;
+  left: 20%;
+  top: 20%
+
+}
+
+
+}
+
