--- a/css/styles.css
+++ b/css/styles.css
@@ -26,7 +26,6 @@ body {
 
   margin: 0px;
   padding: 0px;
-
 }
 
 nav {
@@ -160,12 +159,17 @@ img {
   width: 400px;
   height: 400px;
   object-fit: cover;
+  transition: transform .2s;
   
+}
+
+img:hover {
+  transform: scale(1.01);
 }
 
 .category {
 
-  font-size: 0.9rem;
+  font-size: 1rem;
 
 }
 
@@ -176,7 +180,7 @@ img {
   border: 0.5px solid #463D59;
   text-align: center;
   border-radius: 20px;
-  padding: 5px;
+  padding: 10px 20px;
 }
 
 #githubLink:hover{
@@ -222,9 +226,15 @@ img {
 .go-to-top:hover{
 
   background-color: var(--text);
-  color:white;
 
 }
+
+.arrow:hover{
+
+  color: var(--background);
+
+}
+
 
 footer {
 
@@ -317,15 +327,44 @@ align-content: center;
   flex-direction: row;
   flex-flow: row wrap;
   align-content: center;
+
   margin: 40px 0 40px;
   
 }
 
+.full-width {
+
+width: 100%;
+
+}
+
 .full-width img {
+
+  width: 70%;
+  object-fit: cover;
+  margin-bottom: 20px;
+  height: auto;
+
+}
+
+.full-width02 {
 
   width: 100%;
   object-fit: cover;
   margin-bottom: 20px;
+  padding: 10px;
+  margin-left: 20px;
+
+}
+
+
+.full-width02 li {
+
+  text-align: left;
+  align-content: left;
+  margin: 0;
+  gap: 0px 0px;
+  list-style-type: none;
 
 }
 
@@ -396,6 +435,8 @@ align-content: center;
 
   .container {
     margin: 0px;
+    padding-right: 0px;
+    padding-left: 0px;
   }
   
   .nav-links {
@@ -509,6 +550,7 @@ align-content: center;
   h2 {
 
     font-size: 2em;
+    text-align: center;
 
   }
 
@@ -527,21 +569,26 @@ align-content: center;
 
   }
 
+
   .featured {
 
     text-align: center;
     align-content: center;
     justify-content: center;
     margin: 0;
-    width: auto;
+    padding: 0;
+    gap: 0px 0px;
+
 
   }
 
   .featured img {
 
     margin: 0;
+    padding: 0;
     object-fit: cover;
-    gap: 0px;
+    height: auto;
+    max-width: 100%;
 
   }
 
@@ -558,6 +605,8 @@ align-content: center;
 
     display: flex;
     justify-content: center;
+    margin: 0;
+    padding: 0;
   
   }
 
@@ -576,7 +625,8 @@ flex-direction: column-reverse;
 align-items: center;
 justify-content: center;
 align-content: center;
-padding: 20px ;
+padding: 20px;
+margin: 0;
   
 }
 
@@ -584,8 +634,10 @@ padding: 20px ;
 
 align-content: center;
 margin-top: 50px;
-    
+max-width: 100%;
+
 }
+
 
 
 /* All Project Pages */
@@ -601,33 +653,63 @@ margin-top: 50px;
   align-content: center;
   margin: 0;
   gap: 0px 0px;
+  text-decoration: none;
 
 }
 
+
+.full-width02 li {
+
+  text-align: center;
+  align-content: center;
+  margin: 0;
+  gap: 0px 0px;
+  text-decoration: none;
+  list-style-type: none;
+
+}
+
+ul {
+
+  list-style-type: none;
+
+}
+
+
 .main-image-project-page {
-  width: 100%;
+  width: 200px;
   object-fit: cover;
   margin-bottom: 20px;
+  height: auto;
 }
 
 .image-project-page {
-  width: 100%;
+  width: 100vw;
   object-fit: cover;
   margin-bottom: 20px;
 }
 
 .portfolio-projects {
 
-  display: flex;  
-  flex-direction: column;
-  flex-flow: row wrap;
-  align-content: center;
-  width: 100%;
-  height: auto;
   margin-bottom: 20px;
+  justify-content: center;
+  align-content: center;
+  max-width: 100%;
   
 }
 
+.container-projects{
+
+  margin: 0px;
+  padding: 0px;
+  text-align: center;
+
+}
+
+.container-projects img {
+
+  max-width: 100%;
+}
 
 .content {
 
@@ -647,6 +729,11 @@ margin-top: 50px;
   left: 10%;
   top: 10%;
 
+}
+
+.skills-used {
+  font-size: 2rem;
+  margin-bottom: 20px;
 }
 
 }
