--- a/css/styles.css
+++ b/css/styles.css
@@ -137,8 +137,7 @@ h4 {
 
   font-family: 'Raleway', sans-serif;
   margin: 0;
-  font-size: 2rem;
-  padding-bottom: 15px;
+  font-size: 1.7rem;
 
 }
 
@@ -148,7 +147,7 @@ p {
   font-size: 1.5rem;
   font-weight: 300;
   padding-bottom: 10px;
-  margin: 0;
+
 
 }
 
@@ -181,6 +180,12 @@ img:hover {
 
   font-size: 1rem;
 
+}
+
+.left-container {
+  width: 100%;
+  position: sticky;
+  top: 0;
 }
 
 #githubLink {
@@ -408,12 +413,27 @@ width: 100%;
 .content {
   display: grid;
   grid-template-columns: 2fr 3fr;
-  grid-template-rows: 1fr 1fr;
   gap: 30px;
-  align-content: center;
-  justify-content: center;
-  align-items: center;
   margin: 50px;
+  align-items: flex-start;
+
+}
+
+.content img {
+
+  display: block;
+  justify-content: top;
+  margin: 0;
+  padding-bottom: 20px;
+  object-fit: contain;
+  height: auto;
+
+}
+
+table, th, td {
+  border-collapse:collapse;
+  font-size:12px;
+  padding: 10px;
 }
 
 
@@ -683,18 +703,6 @@ max-width: 100%;
 
 }
 
-
-.full-width02 li {
-
-  text-align: center;
-  align-content: center;
-  margin: 0;
-  gap: 0px 0px;
-  text-decoration: none;
-  list-style-type: none;
-
-}
-
 ul {
 
   list-style-type: none;
@@ -711,7 +719,7 @@ ul {
 
 .image-project-page {
   width: 100vw;
-  object-fit: cover;
+  object-fit:contain;
   margin-bottom: 20px;
 }
 
@@ -739,11 +747,29 @@ ul {
 
 .content {
 
-  display: grid;
-  grid-template-columns: 1fr;
-  grid-template-rows: 1fr;
+  display: flex; 
+  flex-direction: column;
+  justify-content: top;
+  margin: 0;
+  padding: 0;
+  gap: 0px 0px;
+  margin-top: 50px;
+
 
 }
+
+.content img {
+
+  display: block;
+  justify-content: top;
+  margin: 0;
+  padding-bottom: 20px;
+  object-fit: contain;
+  height: auto;
+
+}
+
+
 
 .header-background-project {
 
@@ -760,6 +786,31 @@ ul {
 .skills-used {
   font-size: 2rem;
 }
+
+.left-container {
+  display: flex;
+  position: relative;
+  margin: 0;
+  padding: 0;
+  width: auto;
+  margin-left: 20px;
+  margin-right: 20px;
+
+}
+
+.full-width {
+  margin-top: 20px;
+}
+
+.full-width02 {
+  display: block;
+  position: relative;
+  max-width: 100%;
+  margin: 0;
+  padding: 0;
+
+}
+
 
 }
 
