--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-
 :root {
   --background: #f9e7e7;
   --text: #412e50;
@@ -463,10 +462,15 @@ div.scroll-container img {
   padding: 10px;
 }
 
+::-webkit-scrollbar-thumb:horizontal{
+  background-image: radial-gradient(#00fb9f, transparent);
+  border-radius: 2px;
+  width: 40px;
+}
+
 
 .invisible-scrollbar::-webkit-scrollbar {
-  background-color: none;
-  color: #FCF200;;
+  background-color: transparent;
 }
 
 @media only screen and (max-width: 1309px) {
@@ -506,6 +510,16 @@ div.scroll-container img {
     z-index: 1;
     right: 0;
 
+    }
+
+    ::-webkit-scrollbar-thumb:horizontal{
+      background: transparent;
+      border-radius: 2px;
+    }
+    
+    
+    .invisible-scrollbar::-webkit-scrollbar {
+      background-color: transparent;
     }
 
   .active {
